<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="labex.feevale.br.looky.view.fragment.LoginFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal|top">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/edt_name"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:hint="@string/HINT_NAME"
            android:imeOptions="actionNext"
            android:focusable="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/edt_email"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:hint="@string/HINT_EMAIL"
            android:imeOptions="actionNext"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edt_password"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:hint="@string/HINT_PASSWORD"
            android:imeOptions="actionNext"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edt_password2"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:hint="@string/HINT_PASSWORD2"
            android:imeOptions="actionDone"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BTN_NEXT"
        android:id="@+id/btn_next"
        android:layout_gravity="center_horizontal|bottom" />
</FrameLayout>
