<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="labex.feevale.br.looky.view.fragment.LoginFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal|top"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp"
        android:weightSum="1">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:layout_margin="15dp"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo"
            android:layout_marginTop="16dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/edt_email"
            android:layout_gravity="center_horizontal"
            android:hint="@string/HINT_EMAIL"
            style="@style/edit_text_app"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edt_password"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:hint="@string/HINT_PASSWORD"
            android:imeOptions="actionDone"
            style="@style/edit_text_app"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/BTN_LOGIN"
            android:layout_marginTop="16dp"
            android:id="@+id/btn_login"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/button_style"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/LINK_REGISTER"
        android:id="@+id/text_register"
        android:textColor="@color/blue_app"
        android:textSize="16dp"
        android:layout_gravity="center_horizontal|bottom"/>

</FrameLayout>
